--- a/index.html
+++ b/index.html
@@ -464,26 +464,27 @@
         .project-card::before {
     content: '';
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
     width: 0;
     height: 0;
-    background: linear-gradient(
-        135deg,
-        transparent,
-        rgba(255, 255, 255, 0.1),
-        rgba(255, 255, 255, 0.05),
-        transparent
+    background: radial-gradient(
+        circle,
+        rgba(255, 255, 255, 0.15) 0%,
+        rgba(255, 255, 255, 0.1) 30%,
+        rgba(255, 255, 255, 0.05) 60%,
+        transparent 100%
     );
-    transition: all 0.6s ease;
+    transition: all 0.8s ease;
     opacity: 0;
-    border-radius: 20px;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
 }
 
 .project-card:hover::before {
     opacity: 1;
-    width: 100%;
-    height: 100%;
+    width: 150%;
+    height: 150%;
 }
 
         .project-card:hover {
