--- a/index.html
+++ b/index.html
@@ -464,27 +464,25 @@
         .project-card::before {
     content: '';
     position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 0;
-    height: 0;
-    background: radial-gradient(
-        circle,
-        rgba(255, 255, 255, 0.15) 0%,
-        rgba(255, 255, 255, 0.1) 30%,
-        rgba(255, 255, 255, 0.05) 60%,
+    top: -100%;
+    left: -100%;
+    width: 200%;
+    height: 200%;
+    background: linear-gradient(
+        45deg,
+        transparent 0%,
+        transparent 40%,
+        rgba(255, 255, 255, 0.1) 50%,
+        transparent 60%,
         transparent 100%
     );
-    transition: all 0.8s ease;
+    transition: all 0.7s ease;
     opacity: 0;
-    transform: translate(-50%, -50%);
-    border-radius: 50%;
 }
 
 .project-card:hover::before {
     opacity: 1;
-    width: 150%;
-    height: 150%;
+    transform: translate(50%, 50%) rotate(45deg);
 }
 
         .project-card:hover {
