--- a/index.html
+++ b/index.html
@@ -464,25 +464,27 @@
         .project-card::before {
     content: '';
     position: absolute;
-    top: -100%;
-    left: -100%;
-    width: 200%;
-    height: 200%;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     background: linear-gradient(
-        45deg,
-        transparent 0%,
-        transparent 40%,
+        135deg,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0.05) 25%,
         rgba(255, 255, 255, 0.1) 50%,
-        transparent 60%,
-        transparent 100%
+        rgba(255, 255, 255, 0.05) 75%,
+        rgba(255, 255, 255, 0) 100%
     );
-    transition: all 0.7s ease;
+    transition: all 0.5s ease;
     opacity: 0;
+    transform: scale(0.8);
+    border-radius: 20px;
 }
 
 .project-card:hover::before {
     opacity: 1;
-    transform: translate(50%, 50%) rotate(45deg);
+    transform: scale(1);
 }
 
         .project-card:hover {
