--- a/index.html
+++ b/index.html
@@ -468,22 +468,18 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(
-        135deg,
-        rgba(255, 255, 255, 0) 0%,
-        rgba(255, 255, 255, 0.05) 25%,
-        rgba(255, 255, 255, 0.1) 50%,
-        rgba(255, 255, 255, 0.05) 75%,
-        rgba(255, 255, 255, 0) 100%
-    );
-    transition: all 0.5s ease;
+    background: 
+        linear-gradient(135deg, transparent 0%, rgba(255,255,255,0.1) 50%, transparent 100%),
+        linear-gradient(45deg, transparent 0%, rgba(255,255,255,0.05) 50%, transparent 100%),
+        linear-gradient(90deg, transparent 0%, rgba(255,255,255,0.03) 50%, transparent 100%);
+    transition: all 0.6s ease;
     opacity: 0;
-    transform: scale(0.8);
+    transform: scale(1.1);
     border-radius: 20px;
 }
 
 .project-card:hover::before {
-    opacity: 1;
+    opacity: 0.8;
     transform: scale(1);
 }
 
