--- a/index.html
+++ b/index.html
@@ -121,24 +121,24 @@
         }
 
         .event-icon {
-            width: 32px;
-            height: 32px;
-            border-radius: 8px;
-            background: linear-gradient(45deg, var(--primary), var(--accent));
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 0.8rem;
-            color: white;
-            position: relative;
-            overflow: hidden;
-        }
+    width: 40px;
+    height: 40px;
+    border-radius: 8px;
+    background: linear-gradient(45deg, var(--primary), var(--accent));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+    padding: 4px; /* Отступ для больших иконок */
+}
 
-        .event-icon img {
-            width: 24px;
-            height: 24px;
-            object-fit: contain;
-        }
+.event-icon img {
+    width: 100%;        /* Занимает всю доступную ширину */
+    height: 100%;       /* Занимает всю доступную высоту */
+    object-fit: contain; /* Сохраняет пропорции */
+    filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3));
+}
 
         .days-counter {
             position: absolute;
