--- a/index.html
+++ b/index.html
@@ -492,6 +492,7 @@
         0 25px 50px rgba(0, 0, 0, 0.4),
         0 0 40px rgba(102, 126, 234, 0.3),
         inset 0 0 30px rgba(255, 255, 255, 0.1);
+    backdrop-filter: none;
 }
 
         .project-image {
