--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
 
         .project-card {
             background: linear-gradient(135deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.05) 100%);
-            backdrop-filter: blur(8px);
+            backdrop-filter: none;
             border-radius: 20px;
             padding: 2rem;
             border: 1px solid rgba(255, 255, 255, 0.1);
