--- a/index.html
+++ b/index.html
@@ -121,24 +121,24 @@
         }
 
         .event-icon {
-    width: 40px;
-    height: 40px;
-    border-radius: 8px;
-    background: linear-gradient(45deg, var(--primary), var(--accent));
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    overflow: hidden;
-    padding: 4px; /* Отступ для больших иконок */
-}
+            width: 32px;
+            height: 32px;
+            border-radius: 8px;
+            background: linear-gradient(45deg, var(--primary), var(--accent));
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 0.8rem;
+            color: white;
+            position: relative;
+            overflow: hidden;
+        }
 
-.event-icon img {
-    width: 100%;        /* Занимает всю доступную ширину */
-    height: 100%;       /* Занимает всю доступную высоту */
-    object-fit: contain; /* Сохраняет пропорции */
-    filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3));
-}
+        .event-icon img {
+            width: 24px;
+            height: 24px;
+            object-fit: contain;
+        }
 
         .days-counter {
             position: absolute;
@@ -450,7 +450,7 @@
 
         .project-card {
             background: linear-gradient(135deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.05) 100%);
-            backdrop-filter: none;
+            backdrop-filter: blur(15px);
             border-radius: 20px;
             padding: 2rem;
             border: 1px solid rgba(255, 255, 255, 0.1);
@@ -458,42 +458,42 @@
             cursor: pointer;
             position: relative;
             overflow: hidden;
-            transform-style: preserve-3d;
-            perspective: 1000px;
         }
 
         /* НОВАЯ Анимация стеклянного градиента - из левого верхнего в правый нижний угол */
         .project-card::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: 
-        linear-gradient(135deg, transparent 0%, rgba(255,255,255,0.08) 50%, transparent 100%),
-        linear-gradient(45deg, transparent 0%, rgba(255,255,255,0.04) 50%, transparent 100%),
-        linear-gradient(90deg, transparent 0%, rgba(255,255,255,0.02) 50%, transparent 100%);
-    transition: all 0.6s ease;
-    opacity: 0;
-    transform: scale(1.1);
-    border-radius: 20px;
-}
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(
+                45deg,
+                transparent,
+                transparent,
+                rgba(255, 255, 255, 0.1),
+                rgba(255, 255, 255, 0.05),
+                transparent,
+                transparent
+            );
+            transform: rotate(45deg);
+            transition: all 0.8s ease;
+            opacity: 0;
+        }
 
-.project-card:hover::before {
-    opacity: 0.6;  /* Было 0.8 - стало более прозрачно */
-    transform: scale(1);
-}
+        .project-card:hover::before {
+            opacity: 1;
+            transform: rotate(45deg) translate(50%, 50%);
+        }
 
         .project-card:hover {
-    transform: translateY(-10px) rotateX(2deg) rotateY(2deg);
-    border-color: rgba(102, 126, 234, 0.5);
-    box-shadow: 
-        0 25px 50px rgba(0, 0, 0, 0.4),
-        0 0 40px rgba(102, 126, 234, 0.3),
-        inset 0 0 30px rgba(255, 255, 255, 0.1);
-    backdrop-filter: none;
-}
+            transform: translateY(-10px);
+            border-color: rgba(102, 126, 234, 0.5);
+            box-shadow: 
+                0 20px 40px rgba(0, 0, 0, 0.3),
+                0 0 30px rgba(102, 126, 234, 0.2);
+        }
 
         .project-image {
             width: 100%;
@@ -537,26 +537,6 @@
             line-height: 1.6;
             margin-bottom: 1.5rem;
         }
-
-        /* Анимация текста внутри карточек */
-.project-card h3,
-.project-card p,
-.project-card .tech-stack,
-.project-card .project-link {
-    transition: transform 0.4s ease;
-}
-
-.project-card:hover h3 {
-    transform: translateY(-2px);
-}
-
-.project-card:hover p {
-    transform: translateY(-1px);
-}
-
-.project-card:hover .project-link {
-    transform: translateY(-3px) scale(1.05);
-}
 
         .tech-stack {
             display: flex;
