--- a/index.html
+++ b/index.html
@@ -121,24 +121,24 @@
         }
 
         .event-icon {
-            width: 32px;
-            height: 32px;
-            border-radius: 8px;
-            background: linear-gradient(45deg, var(--primary), var(--accent));
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 0.8rem;
-            color: white;
-            position: relative;
-            overflow: hidden;
-        }
+    width: 40px;
+    height: 40px;
+    border-radius: 8px;
+    background: linear-gradient(45deg, var(--primary), var(--accent));
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+    padding: 4px; /* Отступ для больших иконок */
+}
 
-        .event-icon img {
-            width: 24px;
-            height: 24px;
-            object-fit: contain;
-        }
+.event-icon img {
+    width: 100%;        /* Занимает всю доступную ширину */
+    height: 100%;       /* Занимает всю доступную высоту */
+    object-fit: contain; /* Сохраняет пропорции */
+    filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3));
+}
 
         .days-counter {
             position: absolute;
@@ -462,30 +462,27 @@
 
         /* НОВАЯ Анимация стеклянного градиента - из левого верхнего в правый нижний угол */
         .project-card::before {
-            content: '';
-            position: absolute;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: linear-gradient(
-                45deg,
-                transparent,
-                transparent,
-                rgba(255, 255, 255, 0.1),
-                rgba(255, 255, 255, 0.05),
-                transparent,
-                transparent
-            );
-            transform: rotate(45deg);
-            transition: all 0.8s ease;
-            opacity: 0;
-        }
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+        90deg,
+        transparent 0%,
+        rgba(255, 255, 255, 0.08) 50%,  /* Еще мягче */
+        transparent 100%
+    );
+    transition: left 0.6s ease;
+    opacity: 0;
+    border-radius: 20px;
+}
 
-        .project-card:hover::before {
-            opacity: 1;
-            transform: rotate(45deg) translate(50%, 50%);
-        }
+.project-card:hover::before {
+    opacity: 1;
+    left: 100%;
+}
 
         .project-card:hover {
             transform: translateY(-10px);
