--- a/index.html
+++ b/index.html
@@ -464,24 +464,25 @@
         .project-card::before {
     content: '';
     position: absolute;
-    top: 0;
+    top: -100%;
     left: -100%;
-    width: 100%;
-    height: 100%;
+    width: 200%;
+    height: 200%;
     background: linear-gradient(
-        90deg,
+        45deg,
         transparent 0%,
-        rgba(255, 255, 255, 0.08) 50%,  /* Еще мягче */
+        transparent 40%,
+        rgba(255, 255, 255, 0.1) 50%,
+        transparent 60%,
         transparent 100%
     );
-    transition: left 0.6s ease;
+    transition: all 0.7s ease;
     opacity: 0;
-    border-radius: 20px;
 }
 
 .project-card:hover::before {
     opacity: 1;
-    left: 100%;
+    transform: translate(50%, 50%) rotate(45deg);
 }
 
         .project-card:hover {
