--- a/index.html
+++ b/index.html
@@ -310,19 +310,26 @@
         }
 
         .home-section::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: linear-gradient(135deg, transparent, rgba(255,255,255,0.03), transparent);
-            transition: left 0.6s ease;
-        }
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+        90deg,
+        transparent 0%,
+        rgba(255, 255, 255, 0.04) 50%,
+        transparent 100%
+    );
+    transition: left 0.8s ease;
+    opacity: 0;
+}
 
-        .home-section:hover::before {
-            left: 100%;
-        }
+.home-section:hover::before {
+    opacity: 1;
+    left: 100%;
+}
 
         .section-title {
             font-size: 2rem;
@@ -464,25 +471,24 @@
         .project-card::before {
     content: '';
     position: absolute;
-    top: -100%;
+    top: 0;
     left: -100%;
-    width: 200%;
-    height: 200%;
+    width: 100%;
+    height: 100%;
     background: linear-gradient(
-        45deg,
+        90deg,
         transparent 0%,
-        transparent 40%,
-        rgba(255, 255, 255, 0.1) 50%,
-        transparent 60%,
+        rgba(255, 255, 255, 0.08) 50%,
         transparent 100%
     );
-    transition: all 0.7s ease;
+    transition: left 1s ease;
     opacity: 0;
+    border-radius: 20px;
 }
 
 .project-card:hover::before {
     opacity: 1;
-    transform: translate(50%, 50%) rotate(45deg);
+    left: 100%;
 }
 
         .project-card:hover {
