--- a/index.html
+++ b/index.html
@@ -922,7 +922,7 @@
 
             <!-- Обновления -->
             <section class="home-section">
-                <h2 class="section-title">🔄 Последние обновления</h2>
+                <h2 class="section-title">↪ Последние обновления</h2>
                 <div id="updates-content" class="updates-grid">
                     <div class="no-updates">
                         <i class="fas fa-sync fa-spin"></i><br>
@@ -1031,7 +1031,7 @@
     <!-- Футер -->
     <footer class="footer">
         <div class="container">
-            <p>Создано с ❤️ и страстью к программированию</p>
+            <p>Создано с ❤️ и интересом к программированию</p>
             <div class="social-links">
                 <a href="https://github.com/0ptim1st-DK" class="social-link" target="_blank">
                     <i class="fab fa-github"></i>GitHub
@@ -1048,7 +1048,7 @@
         // ==================== КОНФИГУРАЦИЯ ====================
         const CONFIG = {
             GITHUB_USERNAME: '0ptim1st-DK',
-            GITHUB_TOKEN: 'YOUR_GITHUB_TOKEN_HERE' // ⚠️ ЗАМЕНИТЕ НА ВАШ ТОКЕН
+            GITHUB_TOKEN: 'YOUR_GITHUB_TOKEN_HERE' 
         };
 
         // ==================== ГЛОБАЛЬНЫЕ ПЕРЕМЕННЫЕ ====================
@@ -1412,7 +1412,7 @@
         // Данные проектов по категориям
         const projectsData = {
             games: {
-                title: "🎮 Игры",
+                title: "Игры",
                 icon: "fas fa-gamepad",
                 subcategories: {
                     minecraft: {
@@ -1449,7 +1449,7 @@
                 }
             },
             programs: {
-                title: "💻 Программы",
+                title: "Программы",
                 icon: "fas fa-laptop-code",
                 subcategories: {
                     python: {
@@ -1489,7 +1489,7 @@
                 }
             },
             apps: {
-                title: "📱 Приложения",
+                title: "Приложения",
                 icon: "fas fa-mobile-alt",
                 subcategories: {
                     android: {
