--- a/index.html
+++ b/index.html
@@ -1634,7 +1634,7 @@
                                 id: "autocraft",
                                 title: "AutoCraft AE2",
                                 description: "Продвинутая система автоматизации для Minecraft, расширяющая возможности Applied Energistics 2",
-                                image: "fas fa-robot",
+                                image: "images/projects/ac8/503851357-e79b5a34-e301-4dab-aee7-fc4f10c0b053.png",
                                 technologies: ["Java", "Minecraft", "Forge API", "Automation"],
                                 links: [
                                     { url: "https://github.com/0ptim1st-DK/autocraft-ae2", text: "Исходный код", icon: "fab fa-github" },
@@ -1642,6 +1642,16 @@
                                 ],
                                 detailedDescription: `
                                     <p>AutoCraft AE2 - это революционный мод для Minecraft, который выводит автоматизацию крафта на совершенно новый уровень. Проект расширяет функциональность Applied Energistics 2, предоставляя мощные инструменты для оптимизации производственных процессов.</p>
+                                    
+                                    <div class="project-screenshots">
+                                    <div class="screenshot-item" 
+                                    onclick="openGallery([
+                                    'images/projects/ac8/503851357-e79b5a34-e301-4dab-aee7-fc4f10c0b053.png', 
+                                    ], 0)">
+                                    <img src="images/projects/ac8/503851357-e79b5a34-e301-4dab-aee7-fc4f10c0b053.png" alt="Меню">
+                                    </div>
+                                    </div>
+                                    `
                                     
                                     <div class="project-features">
                                         <div class="feature">
@@ -1652,6 +1662,11 @@
                                             <h4><i class="fas fa-network-wired"></i> Расширенная логистика</h4>
                                             <p>Сложные цепочки крафта и умное управление предметами</p>
                                         </div>
+
+                                    <div class="video-container">
+                                    <iframe src="videos/titri.mp4" 
+                                    frameborder="0" allowfullscreen></iframe>
+                                    </div>
                                     </div>
                                 `
                             }
